Spring Boot 3 Upgrade: code compiles